--- a/task4/css/1.css
+++ b/task4/css/1.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    background-color: #eff0f4;
 }
 
 header {
@@ -7,27 +8,21 @@ header {
     height: 44px;
     color: #fff;
     background-color: #5fc0cd;
-    
-
-    
 }
-    
 
 .left {
     line-height: 44px;
     margin: auto 0;
     float: left;
-    margin-left:15px;
-  
+    margin-left: 15px;
 }
 
 .center {
     position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate( -50%,-50% );
+    transform: translate( -50%, -50%);
     margin: 0;
-   
 }
 
 .right {
@@ -35,5 +30,45 @@ header {
     margin: 0;
     float: right;
     margin-right: 15px;
+}
+
+.top-box {
+    background-color: #fff;
+    height: 50px;
+    margin: 8px auto 7px;
+}
+
+.iphone {
+    margin: 14.75px 40px 0 22PX;
+    width: 13.5px;
+}
+
+input[type="text"] {
+    position: absolute;
+    top: 66.75px;
+    border: none;
+    color: #e1e5e7;
+}
+
+.top-border {
+    margin: 0;
+    position: absolute;
+    padding: 12.75px 0;
+    border-left: 1px solid #eff0f4;
+    top:64px;
+    left:58px;
+}
+.down-box {
+    background-color: #fff;
+    height: 50px;
+
+}
+.locked {
+
+}
+input[type="password"] {
+
+}
+.down-border {
     
 }
