--- a/task4/css/1.css
+++ b/task4/css/1.css
@@ -33,42 +33,92 @@ header {
 }
 
 .top-box {
+    position: relative;
     background-color: #fff;
     height: 50px;
     margin: 8px auto 7px;
 }
 
 .iphone {
-    margin: 14.75px 40px 0 22PX;
+    margin: 14.75px 40px 14.75px 22PX;
     width: 13.5px;
 }
 
 input[type="text"] {
     position: absolute;
-    top: 66.75px;
+    top: 50%;
     border: none;
-    color: #e1e5e7;
+    transform: translateY(-50%);
+    outline: none;
 }
 
 .top-border {
-    margin: 0;
+    margin: 0 0 0 58px;
     position: absolute;
     padding: 12.75px 0;
     border-left: 1px solid #eff0f4;
-    top:64px;
-    left:58px;
+    top: 50%;
+    transform: translateY(-50%);
 }
+
 .down-box {
+    position: relative;
     background-color: #fff;
     height: 50px;
-
+    margin-bottom: 35px;
 }
+
 .locked {
-
+    margin: 14.75px 40px 14.75px 22PX;
+    width: 13.5px;
 }
+
 input[type="password"] {
-
+    position: absolute;
+    top: 50%;
+    outline: none;
+    border: none;
+    transform: translateY(-50%);
 }
+
 .down-border {
-    
+    margin: 0 0 0 58px;
+    position: absolute;
+    padding: 12.75px 0;
+    border-left: 1px solid #eff0f4;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+button {
+    height: 50px;
+    width: 100%;
+    color: #fff;
+    background-color: #5fc0cd;
+    border: none;
+    font-size: 18px;
+    letter-spacing: 10px;
+}
+
+a {
+    float: right;
+    margin-right: 15px;
+    font-size: 16px;
+    color: #5fc0cd;
+}
+
+::-webkit-input-placeholder {
+    /* WebKit, Blink, Edge */
+    color: #bababa;
+}
+
+::-moz-placeholder {
+    /* Mozilla Firefox 19+ */
+    color: #bababa;
+    opacity: 1;
+}
+
+:-ms-input-placeholder {
+    /* Internet Explorer 10-11 */
+    color: #bababa;
 }
