--- a/task3/css/1.css
+++ b/task3/css/1.css
@@ -1,34 +1,35 @@
 body {
+    font-size: 62.5%;    
     background-color: #68cdd5;
     margin: 0;
 }
 
 .boult {
-    margin: 10px 0 0 17.5px;
+    margin: 1em 0 0 1.75em;
 }
 
 .picture {
     display: block;
-    width: 27px;
+    width: 2.7em;
 }
 
 .box {
     text-align: center;
-    margin: 21px 0;
+    margin: 2.1em 0;
 }
 
 .header {
-    width: 90.5px;
-    height: 35px;
+    width: 9.05em;
+    height: 3.5em;
 }
 
 .explain {
     width: 70%;
-    margin: 60.5px auto 101.5px;
+    margin: 3.78rem auto 6.34rem;
     color: #ffffff;
-    font-size: 14px;
-    line-height: 27.11px;
-    letter-spacing: 0.5px;
+    font-size: 0.875rem;
+    line-height: 1.69rem;
+    letter-spacing: 0.03rem;
 }
 
 
@@ -36,7 +37,7 @@ body {
     position: absolute;
     left: 25%;
     transform: translate(-50%,0);
-    width: 42px;
+    width: 4.2em;
 }
 
 .name {
@@ -44,9 +45,9 @@ body {
     left: 25%;
     transform: translate(-50%,0);
     color: #ffffff;
-    line-height: 12.71px;
-    letter-spacing: 0.5px;
-    font-size: 12px;
+    line-height: 0.79rem;
+    letter-spacing: 0.03rem;
+    font-size: 0.75rem;
     margin-top: 4em;
 }
 
@@ -55,7 +56,7 @@ body {
     position: absolute;
     transform: translate(50%,0);
     right: 25%;
-    width: 42px;
+    width: 4.2em;
     
    
 }
@@ -65,8 +66,8 @@ body {
     right: 25%;
     transform: translate(50%,0);
     color: #ffffff;
-    line-height: 12.71px;
-    letter-spacing: 0.5px;
-    font-size: 12px;
+    line-height: 0.79rem;
+    letter-spacing: 0.03rem;
+    font-size: 0.75rem;
     margin-top: 4em;
 }
