--- a/task5/css/1.css
+++ b/task5/css/1.css
@@ -162,7 +162,7 @@ li {
     width: 43%;
     height: 73%;
     border: #5fc0cd solid 0.15rem;
-    border-radius: 5%;
+    border-radius: 10px;
     color: #5fc0cd;
     background-color: #fff
 }
@@ -171,7 +171,7 @@ li {
     height: 73%;
     background-color: #5fc0cd;
     border: none;
-    border-radius: 5%;
+    border-radius: 10px;
     color: #fff
 
 }
