--- a/task3/css/1.css
+++ b/task3/css/1.css
@@ -1,26 +1,25 @@
-body {
-    font-size: 62.5%;    
+body {   
     background-color: #68cdd5;
     margin: 0;
 }
 
 .boult {
-    margin: 1em 0 0 1.75em;
+    margin: 0.625rem 0 0 1.09rem;
 }
 
 .picture {
     display: block;
-    width: 2.7em;
+    width: 1.68rem;
 }
 
 .box {
     text-align: center;
-    margin: 2.1em 0;
+    margin: 1.31rem 0;
 }
 
 .header {
-    width: 9.05em;
-    height: 3.5em;
+    width: 5.65rem;
+    height: 2.18rem;
 }
 
 .explain {
@@ -37,7 +36,7 @@ body {
     position: absolute;
     left: 25%;
     transform: translate(-50%,0);
-    width: 4.2em;
+    width: 2.62rem;
 }
 
 .name {
@@ -48,7 +47,7 @@ body {
     line-height: 0.79rem;
     letter-spacing: 0.03rem;
     font-size: 0.75rem;
-    margin-top: 4em;
+    margin-top: 3rem;
 }
 
 
@@ -56,7 +55,7 @@ body {
     position: absolute;
     transform: translate(50%,0);
     right: 25%;
-    width: 4.2em;
+    width: 2.62rem;
     
    
 }
@@ -69,5 +68,5 @@ body {
     line-height: 0.79rem;
     letter-spacing: 0.03rem;
     font-size: 0.75rem;
-    margin-top: 4em;
+    margin-top: 3rem;
 }
