--- a/task5/css/1.css
+++ b/task5/css/1.css
@@ -164,7 +164,8 @@ li {
     border: #5fc0cd solid 0.15rem;
     border-radius: 10px;
     color: #5fc0cd;
-    background-color: #fff
+    background-color: #fff;
+    outline:none;
 }
 .telephone {
     width: 43%;
@@ -172,6 +173,7 @@ li {
     background-color: #5fc0cd;
     border: none;
     border-radius: 10px;
-    color: #fff
+    color: #fff;
+    outline:none;
 
 }
