--- a/task7/css/1.css
+++ b/task7/css/1.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    background-color: #f0f0f0;
 }
 .header {
     height: 2rem;
@@ -13,4 +14,96 @@ body {
     
     margin-left: 1rem;
     width: 1rem;
+}
+.title {
+    position: relative;
+    height: 3.625rem;
+    background-color: #fff;
+    
+    color: #9a9a9a;
+    font-size: 1.08rem;
+    text-align: center;
+    line-height: 3.625rem;
+    margin: 3rem 5% 1rem;
+}
+.title img {
+    position: absolute;
+    right: .5rem;
+    vertical-align: middle;
+    width: .75rem;
+    top: 50%;
+    margin-top: -.625rem;
+}
+.box {
+    
+    margin: 0 5%;
+    background-color: #fff;
+    text-align: center;
+}
+.name {
+    height: 2.8rem;
+    line-height: 2.8rem;   
+    color: #fbb435;
+    font-size: 1.18rem;
+}
+.line {
+    
+   height: 0.06rem;
+   background-color: #fbb435;
+}
+.plate {
+    
+    height: 4.18rem;
+    margin: 0 10%;
+    color: #fff;
+    background-color: #69d1e9;
+    line-height: 4.18rem;
+}
+.tag {
+    
+    height: 2.5rem;
+    color: #787878;
+    font-size: .76rem;
+    line-height: 2.5rem;
+    margin: 0;
+}
+.triangle {
+    position: fixed;
+    width: 0;
+    height: 0;
+    border-left: .85rem solid #fbb435;
+    border-bottom: .85rem solid transparent;
+    border-top: .85rem solid transparent;
+    right: 8%;
+    top: 18.5rem;
+}
+.paging {
+    margin-top: -1rem;
+}
+.circle {
+    width: .5rem;
+    height: .5rem;
+    border-radius: 50%;
+    display: inline-block;
+}
+.circle1 {
+    background-color: #69d1e9;
+}
+.circle2 {
+    background-color: #f0f0f0;
+}
+.circle3 {
+    background-color: #f0f0f0;
+}
+.circle4 {
+    background-color: #f0f0f0;
+}
+.circle2:hover {
+    background-color: #69d1e9;
+}
+.circle3:hover {
+    background-color: #69d1e9;
+}
+.circle4:hover {
+    background-color: #69d1e9;
 }
