--- a/task7/css/2.css
+++ b/task7/css/2.css
@@ -28,13 +28,14 @@ body {
     position: fixed;
     width: 100%;
     height: 0.06rem;
-    margin-top: 2.5rem;
+    top: 2.5rem;
     background-color: #74d4eb;
 }
 
 .box {
     height: 19.5rem;
     background-color: #29bde0;
+    margin-top: 2.5rem;
 }
 
 .box1 {
@@ -99,9 +100,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    width: 100%;
-    
-    
+    width: 100%;   
 }
 .option {
     height: 2.68rem;
