--- a/task5/css/1.css
+++ b/task5/css/1.css
@@ -38,8 +38,9 @@ body {
     display: flex;
     align-items: center;
     height: 10rem;
-    background: url(../gif/picture.gif) no-repeat;
+    background: url(../gif/picture.gif) no-repeat ;
     background-size: 100% 100%;
+    background-size:cover;
 }
 
 .circle {
