--- a/task7/css/1.css
+++ b/task7/css/1.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     background-color: #f0f0f0;
 }
+
 .header {
     height: 2rem;
     background-color: #29bde0;
@@ -10,11 +11,12 @@ body {
     width: 100%;
     line-height: 2rem;
 }
+
 .form {
-    
     margin-left: 1rem;
     width: 1rem;
 }
+
 .title {
     position: relative;
     height: 3.625rem;
@@ -26,6 +28,7 @@ body {
     line-height: 3.625rem;
     margin: 3rem 5% 1rem;
 }
+
 .title img {
     position: absolute;
     right: .5rem;
@@ -34,39 +37,43 @@ body {
     top: 50%;
     margin-top: -.625rem;
 }
+
 .box {
-    
     margin: 0 5%;
     background-color: #fff;
     text-align: center;
 }
+
 .name {
     height: 2.8rem;
-    line-height: 2.8rem;   
+    line-height: 2.8rem;
     color: #fbb435;
+    margin: 0;
     font-size: 1.18rem;
 }
+
 .line {
-   margin-bottom: 1rem; 
-   height: 0.06rem;
-   background-color: #fbb435;
+    margin-bottom: 1rem;
+    height: 0.06rem;
+    background-color: #fbb435;
 }
+
 .plate {
-    
     height: 4.18rem;
     margin: 0 10%;
     color: #fff;
     background-color: #69d1e9;
     line-height: 4.18rem;
 }
+
 .tag {
-    
     height: 2.5rem;
     color: #787878;
     font-size: .76rem;
     line-height: 2.5rem;
     margin: 0;
 }
+
 .triangle {
     position: fixed;
     width: 0;
@@ -77,33 +84,42 @@ body {
     right: 8%;
     top: 19.5rem;
 }
+
 .paging {
     margin-top: -1rem;
 }
+
 .circle {
     width: .5rem;
     height: .5rem;
     border-radius: 50%;
     display: inline-block;
 }
+
 .circle1 {
     background-color: #69d1e9;
 }
+
 .circle2 {
     background-color: #f0f0f0;
 }
+
 .circle3 {
     background-color: #f0f0f0;
 }
+
 .circle4 {
     background-color: #f0f0f0;
 }
+
 .circle2:hover {
     background-color: #69d1e9;
 }
+
 .circle3:hover {
     background-color: #69d1e9;
 }
+
 .circle4:hover {
     background-color: #69d1e9;
 }
