--- a/task5/css/1.css
+++ b/task5/css/1.css
@@ -3,9 +3,11 @@ body {
 }
 
 .flex-center {
+    width: 100;
     display: flex;
     align-items: center;
     justify-content: center;
+    top: 0;
 }
 
 .white {
@@ -18,6 +20,7 @@ body {
 }
 
 .header {
+   
     position: fixed;
     width: 100%;
     height: 3.125rem;
@@ -35,11 +38,11 @@ body {
 }
 
 .head {
+    margin-top: 3.125rem;
     display: flex;
     align-items: center;
     height: 10rem;
-    background: url(../gif/picture.gif) no-repeat ;
-    background-size: 100% 100%;
+    background: url(../gif/picture.gif) no-repeat;
     background-size:cover;
 }
 
@@ -50,14 +53,17 @@ body {
 
 .top {
     width: 6.25rem;
+    line-height: 3rem;
+    
     display: flex;
     justify-content: space-between;
 }
 
 .down {
+    width: 6.25rem;
     display: flex;
     justify-content: space-between;
-    width: 6.25rem;
+    
 }
 
 .character-1 {
@@ -89,6 +95,7 @@ ul {
 li {
     height: 3.125rem;
     line-height: 3.125rem;
+    border-bottom: 0.06rem solid #e1e5e7;
 }
 
 .gray {
@@ -127,33 +134,30 @@ li {
     display: flex;
     align-items: center;
     padding: 1rem 0;
+    border-bottom: 0.06rem solid #e1e5e7;
 }
 
 .small-box {
     flex: none;
 }
 
-.line {
-    height: 1px;
-    width: 100%;
-    background: #e1e5e7;
-}
+
 
 .front {
-    margin: 0;
     height: 3.125rem;
     line-height: 3.125rem;
+    border-bottom: 0.06rem solid #e1e5e7;
 }
 .brief-introduction {
     font-size: 0.875rem;
 }
 .footer {
+    width: 100%;
+    height: 3.75rem;
     display: flex;
     justify-content: space-around;
-    height: 3.75rem;
     align-items: center;
     position: fixed;
-    width: 100%;
     bottom: 0;
     background-color: #fff;
     
