--- a/task8/css/1.css
+++ b/task8/css/1.css
@@ -109,9 +109,19 @@ ul,li {
 .list2:hover {
     background-color: #38c58a;
 }
-.carousel-indicators {
-    bottom: 0.1rem;
+.carousel-inner > .item > img {
+    margin: auto;
 }
+.carousel-control .icon-prev, .carousel-control .glyphicon-chevron-left {
+    left: 70%;
+}
+.carousel-control .icon-next, .carousel-control .glyphicon-chevron-right {
+     right: 70%;
+}
+.carousel-control {
+    width: 20%;
+}
+
 
 .rocket {
     width: 5rem;
@@ -135,17 +145,91 @@ ul,li {
     display: inline-block;
     width: 2rem;
     height: 2rem;
-    background: url(../img/img2.png) no-repeat 44% 0.3%/1500%;
+    background: url(../img/img2.png) no-repeat 44% 0.3%/1526%;
 }
-.center {
+.margin-top {
+    margin-top: 10rem;
+}
+.strong {
     text-align: center;
+    margin: 2rem 0;
 }
 .synopsis {
     width: 21rem;
     color: #999;
     margin: 0 auto;
-    
 }
 .statistics {
-    border-left: 0.3rem dashed   #999;
+    width: 24rem;
+    height: 21rem;
+    padding-top: 6rem;
+    border-left: 0.15rem dashed #999;
+    
+    padding-left: 7rem;
+}
+.synopsis-style {
+    font-size: 1.8rem;
+}
+.number {
+    vertical-align: top;
+    color: #26a26f;
+}
+.synopsis1 {
+    color: #999;
+    line-height: 4rem;
+}
+.center {
+    text-align: center;
+}
+.title1 {
+    text-align: center;
+    margin: 15rem auto 2rem;
+    font-size: 1.8rem;
+}
+.guiding {
+    font-size: 1.8rem;
+    position: relative;
+    margin: 5rem 0;
+}
+
+.circle {
+    width: 5rem;
+    height: 5rem;
+    line-height: 5rem;
+    text-align: center;
+    float:left;
+    border-radius: 50%;
+    box-shadow: 0 0 0.3rem #888;
+    margin-right: 0.5rem; 
+    color: #26a26f;
+}
+.circle-left {
+    margin-left: 2rem;
+}
+.circle-right1 {
+    font-size: 1.5rem;
+    line-height: 2.5rem;
+    color: #999;
+}
+.circle-right2 {
+    font-size: 1.5rem;
+    line-height: 5rem;
+    color: #999;
+}
+.arrows {
+    width: 2rem;
+    height: 2rem;
+    background: url(../img/img2.png) no-repeat 60% 0.1%/1083%;
+    position: absolute;
+    top: 1.3rem;
+    left: 0;
+}
+.circle1 {
+    float: none;
+    margin: 0 auto;
+}
+.title2 {
+    text-align: center;
+    margin: 10rem auto 2rem;
+    font-size: 1.8rem;
 }
