--- a/task8/css/1.css
+++ b/task8/css/1.css
@@ -5,7 +5,9 @@ body {
 p {
     margin: 0;
 }
-ul,li {
+
+ul,
+li {
     margin: 0;
     padding: 0;
     list-style: none;
@@ -30,7 +32,6 @@ ul,li {
 }
 
 .sine {
- 
     display: inline-block;
     width: 2.5rem;
     height: 3.2rem;
@@ -44,10 +45,12 @@ ul,li {
     height: 3.2rem;
     background: url(../img/img2.png) no-repeat 0 3.57%/1003%;
 }
+
 .register>p {
     display: inline-block;
     vertical-align: top;
 }
+
 .separator {
     display: inline-block;
     border-left: #29b078 solid 1px;
@@ -55,25 +58,32 @@ ul,li {
     margin: auto 0.652rem;
     font-size: 0;
 }
+
 .register1 {
     float: right;
 }
+
 .box {
     background-color: #29b078;
     line-height: 6.25rem;
 }
+
 .padding-left {
     padding-left: 0;
 }
+
 .padding-right {
     padding-right: 0;
 }
+
 .log {
     width: 100%;
 }
+
 .hidden-xs>ul {
     float: right;
 }
+
 .list1 {
     height: 6.25rem;
     display: inline-block;
@@ -81,15 +91,17 @@ ul,li {
     font-size: 1.6rem;
     color: #fff;
 }
+
 .list1:hover {
     border: solid;
     border-width: 0 0 0.4rem 0;
-    
 }
+
 .log-box {
     width: 20rem;
     display: inline-block;
 }
+
 .down-list {
     width: 4rem;
     text-align: center;
@@ -100,28 +112,35 @@ ul,li {
     top: 4.1rem;
     border-radius: 0.5rem;
 }
+
 .list2 {
     background-color: #29b078;
     color: #fff;
     text-align: center;
     line-height: 4.5rem;
 }
+
 .list2:hover {
     background-color: #38c58a;
 }
-.carousel-inner > .item > img {
+
+.carousel-inner>.item>img {
     margin: auto;
 }
-.carousel-control .icon-prev, .carousel-control .glyphicon-chevron-left {
+
+.carousel-control .icon-prev,
+.carousel-control .glyphicon-chevron-left {
     left: 70%;
 }
-.carousel-control .icon-next, .carousel-control .glyphicon-chevron-right {
-     right: 70%;
+
+.carousel-control .icon-next,
+.carousel-control .glyphicon-chevron-right {
+    right: 70%;
 }
+
 .carousel-control {
     width: 20%;
 }
-
 
 .rocket {
     width: 5rem;
@@ -129,63 +148,75 @@ ul,li {
     background: url(../img/img2.png) no-repeat 0 6.3%/586%;
     margin: 0 auto;
 }
+
 .book {
     width: 7rem;
     height: 7rem;
     background: url(../img/img2.png) no-repeat 0 15.3%/420%;
     margin: 0 auto;
 }
+
 .people {
     width: 6rem;
     height: 7rem;
     background: url(../img/img2.png) no-repeat 0 11%/489%;
     margin: 0 auto;
 }
+
 .man {
     display: inline-block;
     width: 2rem;
     height: 2rem;
     background: url(../img/img2.png) no-repeat 44% 0.3%/1526%;
 }
+
 .margin-top {
     margin-top: 10rem;
 }
+
 .strong {
     text-align: center;
     margin: 2rem 0;
 }
+
 .synopsis {
     width: 21rem;
     color: #999;
     margin: 0 auto;
 }
+
 .statistics {
     width: 24rem;
     height: 21rem;
     padding-top: 6rem;
     border-left: 0.15rem dashed #999;
-    
     padding-left: 7rem;
 }
+
 .synopsis-style {
     font-size: 1.8rem;
 }
+
 .number {
     vertical-align: top;
     color: #26a26f;
 }
+
 .synopsis1 {
     color: #999;
     line-height: 4rem;
 }
+
 .center {
     text-align: center;
 }
+
 .title1 {
     text-align: center;
     margin: 15rem auto 2rem;
     font-size: 1.8rem;
 }
+
 .guiding {
     font-size: 1.8rem;
     position: relative;
@@ -197,25 +228,29 @@ ul,li {
     height: 5rem;
     line-height: 5rem;
     text-align: center;
-    float:left;
+    float: left;
     border-radius: 50%;
     box-shadow: 0 0 0.3rem #888;
-    margin-right: 0.5rem; 
+    margin-right: 0.5rem;
     color: #26a26f;
 }
+
 .circle-left {
     margin-left: 2rem;
 }
+
 .circle-right1 {
     font-size: 1.5rem;
     line-height: 2.5rem;
     color: #999;
 }
+
 .circle-right2 {
     font-size: 1.5rem;
     line-height: 5rem;
     color: #999;
 }
+
 .arrows {
     width: 2rem;
     height: 2rem;
@@ -224,12 +259,58 @@ ul,li {
     top: 1.3rem;
     left: 0;
 }
+
 .circle1 {
     float: none;
     margin: 0 auto;
 }
+
 .title2 {
     text-align: center;
     margin: 10rem auto 2rem;
     font-size: 1.8rem;
+}
+
+.card {
+    margin: 1rem auto;
+}
+
+.head {
+    width: 10rem;
+    height: 10rem;
+    margin: 0 auto 2rem;
+}
+
+.head1 {
+    background: url(../img/img2.png) no-repeat 0 28.3%/243%;
+}
+
+.head2 {
+    background: url(../img/img2.png) no-repeat 0 36.8%/243%;
+}
+
+.head3 {
+    background: url(../img/img2.png) no-repeat 0 44.9%/243%;
+}
+
+.head4 {
+    background: url(../img/img2.png) no-repeat 0 52.7%/243%;
+}
+
+.name {
+    text-align: center;
+    font-size: 1.8rem;
+}
+
+.introduce {
+    color: #999;
+    font-size: 1.6rem;
+    margin-top: 2rem;
+}
+
+.frame {
+    width: 95%;
+    box-shadow: 0 0 0.3rem #888;
+    padding: 1rem;
+    margin: auto;
 }
