--- a/task8/css/1.css
+++ b/task8/css/1.css
@@ -6,8 +6,8 @@ p {
     margin: 0;
 }
 
-ul,
-li {
+
+.list-none {
     margin: 0;
     padding: 0;
     list-style: none;
@@ -218,7 +218,7 @@ li {
 }
 
 .guiding {
-    font-size: 1.8rem;
+    font-size: 2rem;
     position: relative;
     margin: 5rem 0;
 }
@@ -339,3 +339,168 @@ li {
 .small-circle4:hover {
     background-color: #29b078;
 }
+.log-box0 {
+    width: 100%;
+    box-shadow: 0 0 0.3rem #888;
+    display: flex;
+    margin: 5rem 0;
+    justify-content: space-between;
+}
+.log-style {
+        
+        width: 19.5%;
+        height: 20rem;
+}
+.log1 {
+    background: url(../img/img2.png) no-repeat 35% 61.7%/208%;
+}
+.log2 {
+    background: url(../img/img2.png) no-repeat 43% 99.2%/162%;
+}
+.log3 {
+    background: url(../img/img2.png) no-repeat 44% 84.3%/159%;
+}
+.log4 {
+    background: url(../img/img2.png) no-repeat 35% 61.7%/208%;
+}
+.log5 {
+    background: url(../img/img2.png) no-repeat 44% 84.3%/159%;
+}
+.log-style:hover {
+    box-shadow: 0 0 0.5rem #888;
+}
+
+.log-box1 {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.log-style1 {
+    width: 40%;
+    height: 15rem;
+    margin: 2rem 5%;
+    box-shadow: 0 0 0.5rem #888;
+} 
+.log6 {
+    background: url(../img/img2.png) no-repeat 29% 61.3%/152%;
+}
+.log7 {
+    background: url(../img/img2.png) no-repeat 35% 83%/113%;
+}
+.log8 {
+    background: url(../img/img2.png) no-repeat 44% 96.7%/134%;
+}
+.log9 {
+    background: url(../img/img2.png) no-repeat 29% 61.3%/152%;
+}
+.log10 {
+    background: url(../img/img2.png) no-repeat 35% 83%/113%;
+}
+
+.log-style2 {
+    width: 20rem;
+    height: 15rem;
+    margin: 1rem auto;
+    box-shadow: 0 0 0.5rem #888;
+}
+.log11 {
+    background: url(../img/img2.png) no-repeat 29% 61.3%/152%;
+}
+.log12 {
+    background: url(../img/img2.png) no-repeat 35% 84%/126%;
+}
+.log13 {
+    background: url(../img/img2.png) no-repeat 44% 98.7%/133%;
+}
+.log14 {
+    background: url(../img/img2.png) no-repeat 29% 61.3%/152%;
+}
+.log15 {
+    background: url(../img/img2.png) no-repeat 35% 84%/126%;
+}
+
+.list-down:after{
+    content: "";
+    width: 8rem;
+    height: 0;
+    top: 2rem;
+    left: -1rem;
+    position: absolute;
+    
+  }
+
+.list-down {
+    width: 10%;
+    margin: 1rem auto;
+    float: left;
+    color: #999;
+    position: relative;
+    font-size: 1.8rem;
+}
+
+@media all and (max-width : 992px) and (min-width:768px){
+    .list-down {
+       width: 20%
+       
+    }
+}
+@media all and (max-width : 767px){
+    .list-down {
+       width: 33%
+
+    }
+}
+.list-down:hover::after {
+    border-bottom: solid 0.15rem #26a26f;
+}
+.footer {
+    font-size: 1.8rem;
+    padding: 2rem 0;
+    background-color: #29b078;
+    color: #fff;
+}
+
+.font-style1 {
+    display: inline-block;
+    margin-bottom: 8rem;
+}
+.font-style2 {
+    display: inline-block;
+    border: #fff solid;
+    border-top: 0;
+    border-bottom: 0;
+    padding: 0 0.5rem;
+    margin: 0 0.5rem;
+    margin-top: 0.6rem;
+}
+.font-style3 {
+    display: inline-block;
+    margin-bottom: 3rem;
+}
+.font-style4 {
+    display: inline-block;
+    margin-bottom: 3rem;
+    margin-right: 1rem;
+
+}
+.font-style5 {
+    margin-right: 1rem;
+}
+.font-style6 {
+    font-size: 1.5rem;
+}
+.code {
+    width: 9.5rem;
+    height: 9.5rem;
+    background: url(../img/img2.png) no-repeat -2% 20%/248%;
+}
+
+@media all and (max-width : 767px){
+    .footer {
+        text-align: center;
+    }
+    .code {
+        margin: auto;
+    }
+
+    }
