--- a/task8/css/1.css
+++ b/task8/css/1.css
@@ -6,7 +6,6 @@ p {
     margin: 0;
 }
 
-
 .list-none {
     margin: 0;
     padding: 0;
@@ -61,6 +60,7 @@ p {
 
 .register1 {
     float: right;
+    margin-right: 1rem;
 }
 
 .box {
@@ -314,6 +314,7 @@ p {
     padding: 1rem;
     margin: auto;
 }
+
 .paging {
     text-align: center;
     margin: 2rem 0;
@@ -327,18 +328,23 @@ p {
     display: inline-block;
     box-shadow: 0 0 0.3rem #888;
 }
+
 .small-circle1 {
     background-color: #29b078;
 }
+
 .small-circle2:hover {
     background-color: #29b078;
 }
+
 .small-circle3:hover {
     background-color: #29b078;
 }
+
 .small-circle4:hover {
     background-color: #29b078;
 }
+
 .log-box0 {
     width: 100%;
     box-shadow: 0 0 0.3rem #888;
@@ -346,26 +352,32 @@ p {
     margin: 5rem 0;
     justify-content: space-between;
 }
+
 .log-style {
-        
-        width: 19.5%;
-        height: 20rem;
+    width: 19.5%;
+    height: 20rem;
 }
+
 .log1 {
     background: url(../img/img2.png) no-repeat 35% 61.7%/208%;
 }
+
 .log2 {
     background: url(../img/img2.png) no-repeat 43% 99.2%/162%;
 }
+
 .log3 {
     background: url(../img/img2.png) no-repeat 44% 84.3%/159%;
 }
+
 .log4 {
     background: url(../img/img2.png) no-repeat 35% 61.7%/208%;
 }
+
 .log5 {
     background: url(../img/img2.png) no-repeat 44% 84.3%/159%;
 }
+
 .log-style:hover {
     box-shadow: 0 0 0.5rem #888;
 }
@@ -375,24 +387,30 @@ p {
     justify-content: space-between;
     flex-wrap: wrap;
 }
+
 .log-style1 {
     width: 40%;
     height: 15rem;
     margin: 2rem 5%;
     box-shadow: 0 0 0.5rem #888;
-} 
+}
+
 .log6 {
     background: url(../img/img2.png) no-repeat 29% 61.3%/152%;
 }
+
 .log7 {
     background: url(../img/img2.png) no-repeat 35% 83%/113%;
 }
+
 .log8 {
     background: url(../img/img2.png) no-repeat 44% 96.7%/134%;
 }
+
 .log9 {
     background: url(../img/img2.png) no-repeat 29% 61.3%/152%;
 }
+
 .log10 {
     background: url(../img/img2.png) no-repeat 35% 83%/113%;
 }
@@ -401,58 +419,51 @@ p {
     width: 20rem;
     height: 15rem;
     margin: 1rem auto;
+   
+}
+.log-style2:hover {
     box-shadow: 0 0 0.5rem #888;
 }
+
 .log11 {
     background: url(../img/img2.png) no-repeat 29% 61.3%/152%;
 }
+
 .log12 {
     background: url(../img/img2.png) no-repeat 35% 84%/126%;
 }
+
 .log13 {
     background: url(../img/img2.png) no-repeat 44% 98.7%/133%;
 }
+
 .log14 {
     background: url(../img/img2.png) no-repeat 29% 61.3%/152%;
 }
+
 .log15 {
     background: url(../img/img2.png) no-repeat 35% 84%/126%;
 }
 
-.list-down:after{
+.list-span:hover::after {
     content: "";
-    width: 8rem;
-    height: 0;
+    width: 8.5rem;
     top: 2rem;
-    left: -1rem;
+    margin-left: -8.5rem;
     position: absolute;
     
-  }
+}
 
 .list-down {
     width: 10%;
     margin: 1rem auto;
     float: left;
     color: #999;
-    position: relative;
     font-size: 1.8rem;
+    position: relative;
 }
 
-@media all and (max-width : 992px) and (min-width:768px){
-    .list-down {
-       width: 20%
-       
-    }
-}
-@media all and (max-width : 767px){
-    .list-down {
-       width: 33%
 
-    }
-}
-.list-down:hover::after {
-    border-bottom: solid 0.15rem #26a26f;
-}
 .footer {
     font-size: 1.8rem;
     padding: 2rem 0;
@@ -464,6 +475,7 @@ p {
     display: inline-block;
     margin-bottom: 8rem;
 }
+
 .font-style2 {
     display: inline-block;
     border: #fff solid;
@@ -473,34 +485,96 @@ p {
     margin: 0 0.5rem;
     margin-top: 0.6rem;
 }
+
 .font-style3 {
     display: inline-block;
     margin-bottom: 3rem;
 }
+
 .font-style4 {
     display: inline-block;
     margin-bottom: 3rem;
     margin-right: 1rem;
-
+    border-bottom: solid #fff .15rem;
 }
+
 .font-style5 {
     margin-right: 1rem;
 }
+
 .font-style6 {
     font-size: 1.5rem;
 }
+
 .code {
     width: 9.5rem;
     height: 9.5rem;
     background: url(../img/img2.png) no-repeat -2% 20%/248%;
 }
 
-@media all and (max-width : 767px){
+
+    .list-span:hover::after {
+        border-bottom: solid 0.15rem #26a26f;
+    }
+
+
+@media all and (max-width: 992px) and (min-width:768px) {
+    .list-down {
+        width: 20%
+    }
+}
+
+@media all and (max-width: 768px) {
+    .list-down {
+        width: 50%;
+    }
+    .list-down {
+        text-align: center;
+    }
     .footer {
         text-align: center;
     }
     .code {
         margin: auto;
     }
-
+    .list-down::before {
+        content: "";
+        width: 0.5rem;
+        height: 0.5rem;
+        border-radius: 50%;
+        background-color: #888;
+        display: inline-block;
+        margin-bottom: .4rem;
+        margin-right: 1rem;
     }
+    ul,
+    li {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+    }
+    .font-style3 {
+        margin-top: 4rem;
+    }
+    .font-style6 {
+        display: block;
+        margin-top: 4rem;
+        margin-bottom: -3rem;
+    }
+   
+}
+.footer::after {
+    content: "";
+    width: 100%;
+    height: 0.15rem;
+    background-color: #fff;
+
+}
+.small-footer {
+    display: flex;
+    justify-content:center;
+    color: #fff;
+    background-color: #29b078;
+    line-height: 3rem;
+}
+
