--- a/task8/css/2.css
+++ b/task8/css/2.css
@@ -242,9 +242,9 @@ li {
 
 .font-style4 {
     display: inline-block;
-    margin-bottom: 3rem;
+    margin-bottom: 3.1rem;
     margin-right: 1rem;
-    border-bottom: solid #fff .15rem;
+    
 }
 
 .font-style5 {
@@ -261,16 +261,34 @@ li {
     margin: auto;
     background: url(../img/img2.png) no-repeat -1.4% 20.2%/274%;
 }
-
+.underline1:hover::after {
+    content: "";
+    display: inline-block;
+    width: 7rem;
+    height: .2rem;
+    margin-left: -7rem;
+    margin-bottom: -1rem;
+    background-color: #fff;
+}
+.underline:hover::after {
+    content: "";
+    display: inline-block;
+    width: 10.5rem;
+    height: .2rem;
+    margin-left: -10.5rem;
+    margin-bottom: -1rem;
+    background-color: #fff;
+}
 
 
 @media all and (max-width: 767px) {
     .footer {
         text-align: center;
     }
-    .code {
-        margin: auto;
+    .font-style5 {
+        margin-left: -3rem;
     }
+    
     ul,
     li {
         margin: 0;
