--- a/task6/css/1.css
+++ b/task6/css/1.css
@@ -10,10 +10,10 @@ li {
 }
 
 .header {
+    width: 100%;
     position: fixed;
     height: 2.75rem;
     background-color: #5fc0cd;
-    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -27,13 +27,13 @@ li {
 }
 
 .button-style {
+    display: block;
     padding: 0 1rem;
     height: 2.18rem;
     margin: 0;
     border-radius: 0.625rem;
     font-size: 1rem;
     line-height: 2.18rem;
-   
 }
 
 .button1 {
@@ -53,29 +53,29 @@ li {
 }
 
 .down-list {
+    width: 100%;
+    height: 2.5rem;
+    position: fixed;
+    top: 2.75rem;
     list-style: none;
     display: flex;
-    height: 2.5rem;
     justify-content: center;
     color: #999;
     font-size: 0.875rem;
-    width: 100%;
-    position: fixed;
-    top: 2.75rem;
     background-color: #f8fafb;
 }
 
 .list {
-    line-height: 2.5rem;
     width: 33.3%;
+    line-height: 2.5rem;
     text-align: center;
     position: relative;
 }
 
 .hide {
+    width: 100%;
     display: none;
     position: absolute;
-    width: 100%;
     text-align: center;
     background-color: #5fc0cd;
     color: #fff;
@@ -89,15 +89,15 @@ li {
     background-color: #55a8b3;
 }
 
-
 .list2:hover {
     background-color: #55a8b3;
 }
 
-.triangle-down {
-    display: inline-block;
+.triangle-down::after {
+    content: "";
     width: 0;
     height: 0;
+    display: inline-block;
     border-left: .25rem solid transparent;
     border-right: .25rem solid transparent;
     border-top: .25rem solid #afbac0;
@@ -111,12 +111,7 @@ li {
     border-left: solid 0.06rem;
 }
 
-.line {
-    height: 1px;
-    width: 100%;
-    background: #e1e5e7;
-    position: fixed;
-}
+
 
 .big-list {
     margin-top: 5.25rem;
@@ -126,6 +121,7 @@ li {
     height: 5.625rem;
     display: flex;
     align-items: center;
+    border: solid 0.03rem #e1e5e7;
 }
 
 .calendar {
@@ -136,8 +132,8 @@ li {
 }
 
 .small-list {
-    line-height: 1.5rem;
     width: 100%;
+    line-height: 1.5rem;
     padding-left: 1rem;
 }
 
@@ -176,43 +172,50 @@ p {
 }
 
 .zoom {
+    display: block;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
 
-.lien1 {
-    height: 1px;
-    width: 100%;
-    background: #e1e5e7;
-}
+
+
 .footer {
+    width: 100%;
+    height: 3.125rem;
     display: flex;
     align-items: center;
     justify-content: space-around;
     font-size: .75rem;
-    height: 3.125rem;
-    position: fixed;
     background-color: #f8fafb;
+    position: fixed;
     bottom: 0;
-    width: 100%;
 }
+
 .house {
-     width: 1.43rem;
+    width: 1.43rem;
 }
+
 .write {
-     width: 2.93rem;
+    width: 2.93rem;
 }
+
 .locus {
-     width: 1.31rem;
+    width: 1.31rem;
 }
+
 .text-align-conter {
+    
     text-align: center;
-    width: 50%;
+    
 }
+
 .lien2 {
     height: 1px;
     width: 100%;
     background: #e1e5e7;
     margin-bottom: 3.125rem;
+}
+.color1 {
+    color: #55a8b3;
 }
