--- a/task6/css/1.css
+++ b/task6/css/1.css
@@ -121,7 +121,7 @@ li {
     height: 5.625rem;
     display: flex;
     align-items: center;
-    border: solid 0.03rem #e1e5e7;
+    border-top: solid 0.03rem #e1e5e7;
 }
 
 .calendar {
