--- a/task8/css/2.css
+++ b/task8/css/2.css
@@ -5,6 +5,16 @@ body {
 p {
     margin: 0;
 }
+a{
+    color: #333;
+}
+a:hover {
+    text-decoration:none;
+    color: #fff;
+}  
+.a {
+    color: #fff;
+}
 
 ul,
 li {
@@ -315,6 +325,10 @@ li {
     .kind {
         padding-left: 1.5rem;
     }
+    .font-style1 {
+        
+        margin-bottom: 2rem;
+    }
 
 }
 
@@ -328,5 +342,5 @@ li {
     justify-content: center;
     color: #fff;
     background-color: #29b078;
-    line-height: 3rem;
+    line-height: 2rem;
 }
