--- a/task8/css/1.css
+++ b/task8/css/1.css
@@ -5,6 +5,16 @@ body {
 p {
     margin: 0;
 }
+a{
+    color: #333;
+}
+a:hover {
+    text-decoration:none;
+    color: #fff;
+}  
+.a {
+    color: #fff;
+}
 
 .list-none {
     margin: 0;
@@ -25,24 +35,24 @@ p {
 .qq {
     margin: 0 1rem;
     display: inline-block;
-    width: 2.5rem;
-    height: 3.2rem;
-    background: url(../img/img2.png) no-repeat 0 -0.3%/1005%;
+    width: 2rem;
+    height: 2.5rem;
+    background: url(../img/img2.png) no-repeat 0 -.4%/1060%;
 }
 
 .sine {
     display: inline-block;
-    width: 2.5rem;
-    height: 3.2rem;
-    background: url(../img/img2.png) no-repeat 0 1.59%/1000%;
+    width: 2rem;
+    height: 2.5rem;
+    background: url(../img/img2.png) no-repeat 0 1.5%/1061%;
 }
 
 .n {
     margin: 0 2rem 0 1rem;
     display: inline-block;
-    width: 2.5rem;
-    height: 3.2rem;
-    background: url(../img/img2.png) no-repeat 0 3.57%/1003%;
+    width: 2rem;
+    height: 2.5rem;
+    background: url(../img/img2.png) no-repeat 0 3.5%/1060%;
 }
 
 .register>p {
@@ -147,22 +157,22 @@ p {
 }
 
 .rocket {
-    width: 5rem;
-    height: 7rem;
+    width: 3rem;
+    height: 5rem;
     background: url(../img/img2.png) no-repeat 0 6.3%/586%;
     margin: 0 auto;
 }
 
 .book {
-    width: 7rem;
-    height: 7rem;
+    width: 5rem;
+    height: 5rem;
     background: url(../img/img2.png) no-repeat 0 15.3%/420%;
     margin: 0 auto;
 }
 
 .people {
-    width: 6rem;
-    height: 7rem;
+    width: 4rem;
+    height: 5rem;
     background: url(../img/img2.png) no-repeat 0 11%/489%;
     margin: 0 auto;
 }
@@ -193,7 +203,7 @@ p {
     width: 24rem;
     height: 21rem;
     padding-top: 6rem;
-    border-left: 0.15rem dashed #999;
+    border-left: 0.15rem dashed #dedede;
     padding-left: 7rem;
 }
 
@@ -587,6 +597,10 @@ p {
         margin-top: 4rem;
         margin-bottom: -3rem;
     }
+    .font-style1 {
+        
+        margin-bottom: 2rem;
+    }
    
 }
 .line {
@@ -599,6 +613,6 @@ p {
     justify-content:center;
     color: #fff;
     background-color: #29b078;
-    line-height: 3rem;
+    line-height: 2rem;
 }
 
