--- a/task12/less&css/1.css
+++ b/task12/less&css/1.css
@@ -1,6 +1,15 @@
 body {
   margin: 0;
 }
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.border {
+  border-bottom: solid 0.07rem #e1e5e7;
+}
 header {
   position: fixed;
   top: 0;
@@ -53,5 +62,85 @@ header span::before {
 }
 .kind {
   line-height: 3rem;
-  padding-left: 2rem;
+  padding-left: 1rem;
+  border-bottom: solid 0.07rem #e1e5e7;
+}
+.kind span {
+  padding-left: 1rem;
+  border-left: solid #5fc0cd 0.2rem;
+}
+ul {
+  padding-left: 1rem;
+}
+ul img {
+  width: .8rem;
+  margin: 0 .2rem;
+}
+ul .first {
+  line-height: 3rem;
+  border-bottom: solid 0.07rem #e1e5e7;
+}
+ul .first span:first-child {
+  border-right: solid #e1e5e7 0.07rem;
+  padding-right: .5rem;
+}
+ul .first span:first-child img {
+  margin-left: 0;
+}
+ul li {
+  line-height: 3rem;
+  border-bottom: solid 0.07rem #e1e5e7;
+  padding-left: .5rem;
+}
+ul li span:first-child {
+  border-right: solid #e1e5e7 0.07rem;
+  padding-right: .5rem;
+}
+ul li span:first-child img {
+  margin-left: 0;
+}
+ul li .one {
+  color: #999;
+}
+ul li .two {
+  color: red;
+}
+.bottom {
+  display: flex;
+  align-items: center;
+  border-bottom: solid 0.07rem #e1e5e7;
+}
+.bottom span:first-child {
+  flex: none;
+  color: #999;
+  padding: 0 .5rem 0 1.5rem;
+  margin-right: .4rem;
+  border-right: solid #e1e5e7 0.07rem;
+}
+.bottom span {
+  margin: .85rem 0;
+}
+footer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 5rem;
+  background-color: #fff;
+}
+footer span {
+  display: inline-block;
+  width: 9rem;
+  line-height: 2.75rem;
+  text-align: center;
+  background: #5fc0cd;
+  color: #fff;
+  border: solid 0.1rem #5fc0cd;
+  border-radius: .5rem;
+}
+footer span:first-child {
+  color: #5fc0cd;
+  background: #fff;
 }
