--- a/task12/less&css/1.less
+++ b/task12/less&css/1.less
@@ -1,8 +1,18 @@
 body {
     margin: 0;
 }
+ul,li {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
 @blue: #5fc0cd;
 @white: #fff;
+@gray: #e1e5e7;
+.border {
+
+ border-bottom: solid .07rem @gray;
+}
 
 header {
     position: fixed;
@@ -60,6 +70,85 @@ header {
 
 .kind {
      line-height: 3rem;
-     padding-left: 2rem;
+     padding-left: 1rem;
+     .border;
+     span{
+         padding-left: 1rem;
+         border-left: solid @blue .2rem;
+         
+     }
      
+}
+ul {
+    padding-left: 1rem;
+    img {
+        width: .8rem;
+        margin: 0 .2rem;
+    }
+   
+    .first {
+        line-height: 3rem;
+        .border;
+        span:first-child {
+            border-right: solid @gray .07rem;
+            padding-right: .5rem;
+            img {
+                margin-left: 0;
+            }
+
+        }
+    }
+    li {
+        .first;
+        padding-left: .5rem;
+        .one {
+            color: #999;
+        }
+        .two {
+            color: red;
+        }
+    }
+        
+}
+.bottom {
+    display: flex;
+    align-items: center;
+    .border;
+    span:first-child {
+        flex: none;
+        color: #999;
+        padding: 0 .5rem 0 1.5rem;
+        margin-right: .4rem;
+        border-right: solid @gray .07rem;
+
+
+    }
+    span {
+        margin: .85rem 0;
+    }
+}
+footer {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 5rem;
+    background-color: #fff;
+    span {
+        display: inline-block;
+        width: 9rem;
+        line-height: 2.75rem;
+        text-align: center;
+        background: @blue;
+        color: #fff;
+        border: solid .1rem @blue;
+        border-radius: .5rem;
+    }
+    span:first-child {
+        color: @blue;
+        background: #fff;
+        
+    }
 }
